# MITM-Proxy

./: .gitignore  Cargo.toml  README.md  run.sh
mitm_proxy/: Cargo.toml
mitm_proxy/src/: main.rs  managed_proxy.rs  requests.rs
proxyapi/src/: proxy_handler.rs
proxyapi/src/ca/: gen_key.sh  mod.rs
proxyapi/src/proxy/: internal.rs
requests_editor/: Cargo.toml
requests_editor/src/: body_encoder.rs  header_parser.rs  lib.rs
