[package]
name = "mitm_proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
confy = "0.5.1"
proxyapi = {path = "../proxyapi"}
requests_editor = {path = "../requests_editor"}
tokio = { version = "1", features = ["full"] }
rand = "0.8.5"
image = "0.24.5"
signal-hook = "0.3.4"
